--- a/files/styles/style-outdoor.css
+++ b/files/styles/style-outdoor.css
@@ -45,8 +45,36 @@ QCheckBox::indicator {
 	color: #FFFFFF;
 	width: 10px;
 	height: 10px;
-	margin-top: 1ex;
+	margin: 2px 2px 2px 2px;
 }
+
+/*QCheckBox::indicator:unchecked:hover {
+background-color: #81ff3d;
+}*/
+
+QCheckBox::indicator:unchecked:pressed {
+	background-color: #286e08;
+}
+
+QCheckBox::indicator:checked {
+	background-color: #49c70f;
+}
+
+/*QCheckBox::indicator:checked:hover {
+background-color: #AAAAAA;
+}*/
+
+QCheckBox::indicator:checked:pressed {
+	background-color: #AAAAAA;
+}
+
+/* QCheckBox::indicator:indeterminate:hover {
+image: url(:/files/images/checkbox_indeterminate_hover.png);
+}
+
+QCheckBox::indicator:indeterminate:pressed {
+image: url(:/files/images/checkbox_indeterminate_pressed.png);
+}*/
 
 /*QComboBox {
 	border: 1px solid #111111;
@@ -113,34 +141,6 @@ QComboBox::indicator:checked {
      top: 1px;
      left: 1px;
  }
-
-/*QCheckBox::indicator:unchecked:hover {
-	background-color: #81ff3d;
-}*/
-
-QCheckBox::indicator:unchecked:pressed {
-	background-color: #286e08;
-}
-
-QCheckBox::indicator:checked {
-	background-color: #49c70f;
-}
-
-/*QCheckBox::indicator:checked:hover {
-	background-color: #AAAAAA;
-}*/
-
-QCheckBox::indicator:checked:pressed {
-	background-color: #AAAAAA;
-}
-
-/* QCheckBox::indicator:indeterminate:hover {
-     image: url(:/files/images/checkbox_indeterminate_hover.png);
- }
-
- QCheckBox::indicator:indeterminate:pressed {
-     image: url(:/files/images/checkbox_indeterminate_pressed.png);
- }*/
 
 QLineEdit {
 	border: 1px solid #111111;
